--- a/requirements.txt
+++ b/requirements.txt
@@ -36,3 +36,6 @@ uritemplate==3.0.0
 urllib3==1.24.1
 uWSGI==2.0.17.1
 zope.interface==4.6.0
+
+
+./certbot-auto certonly --agree-tos --webroot -w /var/www/html -d example.com -m root@roomii.com
