--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aioredis==1.2.0
+asgi-redis==1.4.3
 asgiref==2.3.0
 astroid==2.1.0
 async-timeout==2.0.1
@@ -64,11 +65,14 @@ social-auth-app-django==3.1.0
 social-auth-core==2.0.0
 SQLAlchemy==1.2.14
 sqlparse==0.2.4
+stripe==2.20.3
 Twisted==18.9.0
 txaio==18.8.1
 typed-ast==1.3.0
+ua-parser==0.8.0
 uritemplate==3.0.0
 urllib3==1.24.1
+user-agents==1.1.0
 uWSGI==2.0.17.1
 wrapt==1.11.1
 zope.interface==4.6.0
